# tedium

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: contiguous_reader.rs  interleaved_reader.rs  tedium_benchmark.rs  writers.rs
docs/: comparison.md
docs/design/: read-planning.md  start-position-read-api.md
examples/: benchmarking.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: file_from_bytes.rs
lv/test-file-generator/: create test file.vi  generate channel data type tests.vi  generate property tests.vi  generate structural test.vi  generate sub-block test.vi  get grouped data.vi  tdms-test-generator.lvproj
plans/: issue-23-start-position-read-api.md  multi-channel-start-position-api-revised.md  multi-channel-start-position-api.md
src/: channel_reader.rs  data_reader.rs  data_types.rs  error.rs  file_types.rs  index.rs  lib.rs  meta_data.rs  metadata_reader.rs  paths.rs  properties.rs  raw_data.rs  reader.rs  registry.rs  writer.rs
src/file/: channel_reader.rs  file_writer.rs  mod.rs
src/index/: building.rs  mod.rs  querying.rs  writing.rs
src/io/: data_types.rs  mod.rs  reader.rs  writer.rs
src/io/data_types/: bool.rs  complex.rs  extended.rs  mod.rs  native_numerics.rs  strings.rs  timestamp.rs
src/raw_data/: contigious_multi_channel_read.rs  interleaved_multi_channel_read.rs  mod.rs  read.rs  records.rs  write.rs
tests/: defragment.rs  integration-tests.md  memory_buffers.rs  read_properties.rs  read_structure.rs  read_with_offset.rs  tdms-test-file.tdms  test_defragment.tdms  write_properties.rs  write_structure.rs
tests/common/: mod.rs
