[package]
name = "tedium"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/WiresmithTech/tedium"
repository = "https://github.com/WiresmithTech/tedium"
description = "A fast and easy TDMS Library for Rust"
keywords = ["labview", "ni", "tdms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-derive = "*"
thiserror = "1"
paste = "1.0"
labview-interop = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tedium_benchmark"
harness = false