[package]
name = "tedium"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/WiresmithTech/tedium"
repository = "https://github.com/WiresmithTech/tedium"
description = "A fast and easy TDMS Library for Rust"
keywords = ["labview", "ni", "tdms"]
readme = "README.md"

[features]
default = []
chrono = ["dep:chrono", "labview-interop/chrono"]

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2"
paste = "1.0"
labview-interop = "0.4"
chrono = { version = "0.4", optional = true}

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "tedium_benchmark"
harness = false